--- a/mail/themes/windows/mail/messageHeader.css
+++ b/mail/themes/windows/mail/messageHeader.css
@@ -168,6 +168,10 @@ window[inlinetoolbox] #newtoolbar {
   color: -moz-activehyperlinktext;
 }
 
+mail-headerfield > .headerValue:focus {
+  outline-color: Highlight;
+}
+
 .moreIndicator {
   font-weight: bold;
 }
