--- a/mail/themes/osx/mail/filterDialog.css
+++ b/mail/themes/osx/mail/filterDialog.css
@@ -123,3 +123,7 @@ hbox > .small-button + .small-button {
 #countBox[filterActive="nomatches"] {
   color: #cc0000;
 }
+
+treecolpicker {
+  display: none;
+}
