--- a/mail/themes/osx/mail/searchDialog.css
+++ b/mail/themes/osx/mail/searchDialog.css
@@ -34,6 +34,11 @@
   height: 100px;
 }
 
+#searchTermList > richlistitem {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
 #searchTermList > listitem[selected="true"] {
   background-color: inherit;
 }
@@ -53,10 +58,6 @@ menulist {
   width: 18em;
 }
 
-.filler {
-  padding-inline-end: 22px;
-}
-
 .search-menulist {
   width: 12em;
 }
@@ -65,55 +66,20 @@ menulist {
   color: GrayText;
 }
 
+spinbuttons {
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
 .small-button {
-  -moz-appearance: none;
-  font: icon;
-  text-shadow: 0 1px #F2F2F2;
-  border: 1px solid #A8A8A8;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  background: linear-gradient(to top, #ECECEC, #ECECEC 50%, #F9F9F9 0%, #F9F9F9);
   min-width: 22px;
   height: 20px;
   padding: 0 1px 1px 0;
-  margin: 0;
+  margin: 4px 0;
 }
 
-.small-button:-moz-locale-dir(rtl) {
-  border-radius: 0 4px 4px 0;
-}
-
-.small-button:not([disabled="true"]):hover:active {
-  background: linear-gradient(to top, #B0B0B0, #B4B4B4 50%, #BFBFBF 0%, #BABABA);
-  border: 1px solid #9C9C9C;
-}
-
-.small-button[disabled="true"] {
-  opacity: 0.6;
-}
-
-.small-button + .small-button {
-  border-radius: 0 4px 4px 0;
-}
-
-.small-button + .small-button:-moz-locale-dir(rtl) {
-  border-radius: 4px 0 0 4px;
-}
-
-.small-button + .small-button,
-.small-button + .small-button:hover:active {
-  border-left-width: 0;
-  min-width: 21px;
-}
-
-.small-button:focus {
-  box-shadow:  inset 0 0 1px -moz-mac-focusring,
-               1px 0 2px 1px -moz-mac-focusring,
-               -1px 0 2px 1px -moz-mac-focusring;
-}
-
-.small-button:focus + .small-button {
-  box-shadow: inset 1px 0 -moz-mac-focusring;
+.small-button:first-child {
+  margin-inline-start: 2px;
 }
 
 /* ::::: thread decoration ::::: */
