--- a/mail/themes/windows/mail/filterDialog.css
+++ b/mail/themes/windows/mail/filterDialog.css
@@ -16,6 +16,11 @@ treecolpicker {
   display: none;
 }
 
+richlistitem {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
 richlistitem > checkbox {
   width: 100px;
   margin: 0;
@@ -42,8 +47,12 @@ checkbox:not([label]) .checkbox-label-box {
 
 .small-button {
   min-width: 3em;
-  padding: 0;
-  margin: 0 1px;
+  margin: 1px 2px;
+}
+
+.small-button + .small-button {
+  margin-inline-start: 0;
+  margin-inline-end: 4px;
 }
 
 .search-menulist, .search-value-menulist {
@@ -52,18 +61,6 @@ checkbox:not([label]) .checkbox-label-box {
 
 .search-menulist[unavailable="true"] {
   color: GrayText;
-}
-
-textbox {
-  margin: 1px 4px;
-}
-
-.filler {
-  padding-inline-end: 22px;
-}
-
-.ruleaction {
-  border: 1px solid transparent;
 }
 
 .ruleactionitem {
